cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_13848_rgs-rke2-rancher-cf.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Rancher Manager and RKE2 AWS CloudFormation Template

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "AWS Configuration Options"
        Parameters:
          - VolumeSize
          - VPCCidr
          - AllowedCidr
      -
        Label:
          default: "Rancher Configuration Options"
        Parameters:
          - ClusterJoinToken
          - RancherBoostrapPassword

Parameters:
  VolumeSize:
    Description: "Volume Size for Rancher Nodes (Default: 50)"
    Type: Number
    MinValue: '25'
    Default: '50'
  VPCCidr:
    Description: "VPC CIDR - First 2 Octects Only (Default: 10.0)"
    Type: String
    MinLength: '3'
    MaxLength: '7'
    Default: '10.0'
    AllowedPattern: (\d{1,3})\.(\d{1,3})
    ConstraintDescription: must be a valid dot-separated string of the form x.x
  AllowedCidr:
    Description: "Allow CIDR for Inbound Traffic to Rancher (Default: 0.0.0.0/0)"
    Type: String
    Default: '0.0.0.0/0'
  ClusterJoinToken:
    Description: "Cluster Join Token for RKE2 Cluster (Default: Pa22word)"
    Type: String
    Default: Pa22word
    MinLength: '5'
    MaxLength: '200'
    NoEcho: true
  RancherBoostrapPassword:
    Description: "Initial Password to Access Rancher Manager (Default: Pa22word)"
    Type: String
    Default: Pa22word
    MinLength: '5'
    MaxLength: '50'
    NoEcho: true

Mappings:
  AWSRegionArch2AMI:
    us-east-1:
      HVM64: ami-0a88744460c2b27c0
    us-west-2:
      HVM64: ami-06c52a87c42e8326a

Resources:
  #######
  # VPC #
  #######
  RancherVPC:
    Properties:
      CidrBlock: !Join
        - ''
        - - !Ref 'VPCCidr'
          - .0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - vpc
    Type: AWS::EC2::VPC

  ##################
  # Public Subnets #
  ##################
  RancherPublicSubnet1:
    Properties:
      CidrBlock: !Join
        - ''
        - - !Ref 'VPCCidr'
          - .1.0/24
      MapPublicIpOnLaunch: 'true'
      VpcId: !Ref 'RancherVPC'
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - public-1
    Type: AWS::EC2::Subnet
  RancherPublicSubnet2:
    Properties:
      CidrBlock: !Join
        - ''
        - - !Ref 'VPCCidr'
          - .2.0/24
      MapPublicIpOnLaunch: 'true'
      VpcId: !Ref 'RancherVPC'
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - public-2
    Type: AWS::EC2::Subnet
  RancherPublicSubnet3:
    Properties:
      CidrBlock: !Join
        - ''
        - - !Ref 'VPCCidr'
          - .3.0/24
      MapPublicIpOnLaunch: 'true'
      VpcId: !Ref 'RancherVPC'
      AvailabilityZone: !Select
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - public-3
    Type: AWS::EC2::Subnet

  ###################
  # Private Subnets #
  ###################
  RancherPrivateSubnet1:
    Properties:
      CidrBlock: !Join
        - ''
        - - !Ref 'VPCCidr'
          - .10.0/24
      MapPublicIpOnLaunch: 'false'
      VpcId: !Ref 'RancherVPC'
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - private-1
    Type: AWS::EC2::Subnet
  RancherPrivateSubnet2:
    Properties:
      CidrBlock: !Join
        - ''
        - - !Ref 'VPCCidr'
          - .11.0/24
      MapPublicIpOnLaunch: 'false'
      VpcId: !Ref 'RancherVPC'
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - private-2
    Type: AWS::EC2::Subnet
  RancherPrivateSubnet3:
    Properties:
      CidrBlock: !Join
        - ''
        - - !Ref 'VPCCidr'
          - .12.0/24
      MapPublicIpOnLaunch: 'false'
      VpcId: !Ref 'RancherVPC'
      AvailabilityZone: !Select
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - private-3
    Type: AWS::EC2::Subnet

  #########################
  # NAT Gateway (Private) #
  #########################
  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NATGatewayEIP.AllocationId'
      SubnetId: !Ref 'RancherPublicSubnet1'
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - nat-gateway
  NATGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  PrivateRouteTable:
    Properties:
      VpcId: !Ref 'RancherVPC'
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - private-rt-table
    Type: AWS::EC2::RouteTable
  RouteNATGateway:
    DependsOn:
      - NATGateway
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'PrivateRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NATGateway'
  PrivateRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'PrivateRouteTable'
      SubnetId: !Ref 'RancherPrivateSubnet1'
  PrivateRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'PrivateRouteTable'
      SubnetId: !Ref 'RancherPrivateSubnet2'
  PrivateRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'PrivateRouteTable'
      SubnetId: !Ref 'RancherPrivateSubnet3'

  #############################
  # Internet Gateway (Public) #
  #############################
  PublicInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - igw
  PublicGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'RancherVPC'
      InternetGatewayId: !Ref 'PublicInternetGateway'
  PublicRouteTable:
    Properties:
      VpcId: !Ref 'RancherVPC'
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - public-rt-table
    Type: AWS::EC2::RouteTable
  PublicRouteToGateway:
    Type: AWS::EC2::Route
    DependsOn: PublicGatewayAttachment
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      RouteTableId: !Ref 'PublicRouteTable'
      GatewayId: !Ref 'PublicInternetGateway'
  PublicRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      SubnetId: !Ref 'RancherPublicSubnet1'
  PublicRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      SubnetId: !Ref 'RancherPublicSubnet2'
  PublicRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      SubnetId: !Ref 'RancherPublicSubnet3'

  #############
  # IAM Roles #
  #############
  AwsCPRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: rancher-instance-policy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - autoscaling:DescribeAutoScalingGroups
                  - autoscaling:DescribeLaunchConfigurations
                  - autoscaling:DescribeTags
                  - ec2:DescribeInstances
                  - ec2:DescribeRegions
                  - ec2:DescribeRouteTables
                  - ec2:DescribeSecurityGroups
                  - ec2:DescribeSubnets
                  - ec2:DescribeVolumes
                  - ec2:DescribeAvailabilityZones
                  - ec2:CreateSecurityGroup
                  - ec2:CreateTags
                  - ec2:CreateVolume
                  - ec2:ModifyInstanceAttribute
                  - ec2:ModifyVolume
                  - ec2:AttachVolume
                  - ec2:AuthorizeSecurityGroupIngress
                  - ec2:CreateRoute
                  - ec2:DeleteRoute
                  - ec2:DeleteSecurityGroup
                  - ec2:DeleteVolume
                  - ec2:DetachVolume
                  - ec2:RevokeSecurityGroupIngress
                  - ec2:DescribeVpcs
                  - elasticloadbalancing:AddTags
                  - elasticloadbalancing:AttachLoadBalancerToSubnets
                  - elasticloadbalancing:ApplySecurityGroupsToLoadBalancer
                  - elasticloadbalancing:CreateLoadBalancer
                  - elasticloadbalancing:CreateLoadBalancerPolicy
                  - elasticloadbalancing:CreateLoadBalancerListeners
                  - elasticloadbalancing:ConfigureHealthCheck
                  - elasticloadbalancing:DeleteLoadBalancer
                  - elasticloadbalancing:DeleteLoadBalancerListeners
                  - elasticloadbalancing:DescribeLoadBalancers
                  - elasticloadbalancing:DescribeLoadBalancerAttributes
                  - elasticloadbalancing:DetachLoadBalancerFromSubnets
                  - elasticloadbalancing:DeregisterInstancesFromLoadBalancer
                  - elasticloadbalancing:ModifyLoadBalancerAttributes
                  - elasticloadbalancing:RegisterInstancesWithLoadBalancer
                  - elasticloadbalancing:SetLoadBalancerPoliciesForBackendServer
                  - elasticloadbalancing:AddTags
                  - elasticloadbalancing:CreateListener
                  - elasticloadbalancing:CreateTargetGroup
                  - elasticloadbalancing:DeleteListener
                  - elasticloadbalancing:DeleteTargetGroup
                  - elasticloadbalancing:DescribeListeners
                  - elasticloadbalancing:DescribeLoadBalancerPolicies
                  - elasticloadbalancing:DescribeTargetGroups
                  - elasticloadbalancing:DescribeTargetHealth
                  - elasticloadbalancing:ModifyListener
                  - elasticloadbalancing:ModifyTargetGroup
                  - elasticloadbalancing:RegisterTargets
                  - elasticloadbalancing:DeregisterTargets
                  - elasticloadbalancing:SetLoadBalancerPoliciesOfListener
                  - iam:CreateServiceLinkedRole
                  - kms:DescribeKey
                  - kms:ListKeys
                Resource: '*'

  AwsCPInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: demo-profile
      Path: /
      Roles:
        - !Ref 'AwsCPRole'

  RancherCloudCredentialUser:
    Type: AWS::IAM::User
    Properties:
      UserName: rancher-cloud-credential-user

  RancherCloudCredentialsPolicy:
    Type: 'AWS::IAM::Policy'
    DependsOn: RancherCloudCredentialUser
    Properties:
      PolicyName: rancher-cloud-credential-policy
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Action:
              - ec2:*
              - cloudformation:*
              - eks:*
              - kms:Decrypt
              - kms:GenerateDataKeyWithoutPlaintext
              - kms:Encrypt
              - kms:DescribeKey
              - kms:CreateGrant
              - iam:PassRole
              - iam:ListRoles
              - iam:ListRoleTags
              - iam:ListInstanceProfilesForRole
              - iam:ListInstanceProfiles
              - iam:ListAttachedRolePolicies
              - iam:GetRole
              - iam:GetInstanceProfile
              - iam:DetachRolePolicy
              - iam:AttachRolePolicy
              - iam:AddRoleToInstanceProfile
              - iam:CreateInstanceProfile
              - iam:CreateRole
              - iam:CreateServiceLinkedRole
              - iam:DeleteInstanceProfile
              - iam:DeleteRole
              - iam:RemoveRoleFromInstanceProfile
            Resource: '*'
      Users:
      - !Ref RancherCloudCredentialUser

  RancherCloudCredentialKey:
    Type: AWS::IAM::AccessKey
    DependsOn: RancherCloudCredentialUser
    Properties:
      UserName: !Ref RancherCloudCredentialUser

  RancherInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: rancher-instance-policy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - autoscaling:DescribeAutoScalingGroups
                  - autoscaling:DescribeAutoScalingInstances
                Resource: '*'

  RancherInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref 'RancherInstanceRole'

  ###############
  # Autoscaling #
  ###############
  RancherCPLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - cp-launch-template
      LaunchTemplateData:
        IamInstanceProfile:
          Arn: !GetAtt 'RancherInstanceProfile.Arn'
        DisableApiTermination: 'true'
        ImageId: !FindInMap
          - AWSRegionArch2AMI
          - !Ref 'AWS::Region'
          - HVM64
        InstanceType: 'm5.large'
        SecurityGroupIds:
          - !GetAtt 'RancherCPSecurityGroup.GroupId'
          - !GetAtt 'RancherIngressSecurityGroup.GroupId'
        BlockDeviceMappings:
          - Ebs:
              VolumeSize: !Ref 'VolumeSize'
              VolumeType: gp3
              DeleteOnTermination: true
              Encrypted: true
            DeviceName: /dev/sda1
        UserData: !Base64
          Fn::Join:
            - ''
            - - "#!/bin/bash -xe\n"
              - "echo 'Initializing RKE2..'\n"
              - !Join
                - ' '
                - - init-rke2.sh
                  - 'server'
                  - !Ref 'ClusterJoinToken'
                  - !GetAtt 'ControlPlaneELB.DNSName'
                  - !Ref 'AWS::Region'
              - "\n"
              - "echo 'Initializing Rancher..'\n"
              - !Join
                - ' '
                - - init-rancher.sh
                  - !GetAtt 'RancherELB.DNSName'
                  - !Ref 'RancherBoostrapPassword'
              - "\n"
  RancherCPAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref 'RancherCPLaunchTemplate'
        Version: !GetAtt 'RancherCPLaunchTemplate.LatestVersionNumber'
      LoadBalancerNames:
        - !Ref 'ControlPlaneELB'
      MaxSize: '3'
      MinSize: '3'
      DesiredCapacity: '3'
      VPCZoneIdentifier:
        - !Ref 'RancherPrivateSubnet1'
        - !Ref 'RancherPrivateSubnet2'
        - !Ref 'RancherPrivateSubnet3'
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - cp-asg
          PropagateAtLaunch: true

  RancherWorkerLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    DependsOn:
      - RancherCPAutoScalingGroup
    Properties:
      LaunchTemplateName: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - worker-launch-template
      LaunchTemplateData:
        DisableApiTermination: 'true'
        ImageId: !FindInMap
          - AWSRegionArch2AMI
          - !Ref 'AWS::Region'
          - HVM64
        InstanceType: 'm5.large'
        SecurityGroupIds:
          - !GetAtt 'RancherCPSecurityGroup.GroupId'
          - !GetAtt 'RancherIngressSecurityGroup.GroupId'
        BlockDeviceMappings:
          - Ebs:
              VolumeSize: !Ref 'VolumeSize'
              VolumeType: gp3
              DeleteOnTermination: true
              Encrypted: true
            DeviceName: /dev/sda1
        UserData: !Base64
          Fn::Join:
            - ''
            - - "#!/bin/bash -xe\n"
              - "echo 'Initializing RKE2..'\n"
              - !Join
                - ' '
                - - init-rke2.sh
                  - 'agent'
                  - !Ref 'ClusterJoinToken'
                  - !GetAtt 'ControlPlaneELB.DNSName'
                  - !Ref 'AWS::Region'
              - "\n"
  RancherWorkerAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    DependsOn:
      - RancherCPAutoScalingGroup
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref 'RancherWorkerLaunchTemplate'
        Version: !GetAtt 'RancherWorkerLaunchTemplate.LatestVersionNumber'
      LoadBalancerNames:
        - !Ref 'ControlPlaneELB'
        - !Ref 'RancherELB'
      MaxSize: '3'
      MinSize: '3'
      DesiredCapacity: '3'
      VPCZoneIdentifier:
        - !Ref 'RancherPrivateSubnet1'
        - !Ref 'RancherPrivateSubnet2'
        - !Ref 'RancherPrivateSubnet3'
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - worker-asg
          PropagateAtLaunch: true

  ###########################
  # ElasticFileSystem (EFS) #
  ###########################
  DemoEFS:
    Type: 'AWS::EFS::FileSystem'
    Properties:
      BackupPolicy:
        Status: ENABLED
      PerformanceMode: generalPurpose
      Encrypted: true
      LifecyclePolicies:
        - TransitionToIA: AFTER_30_DAYS
        - TransitionToPrimaryStorageClass: AFTER_1_ACCESS
      FileSystemTags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - efs

  MountTargetPrivateSubnet1:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref DemoEFS
      SubnetId: !Ref RancherPrivateSubnet1
      SecurityGroups:
      - !Ref EFSSecurityGroup

  MountTargetPrivateSubnet2:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref DemoEFS
      SubnetId: !Ref RancherPrivateSubnet2
      SecurityGroups:
      - !Ref EFSSecurityGroup

  MountTargetPrivateSubnet3:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref DemoEFS
      SubnetId: !Ref RancherPrivateSubnet3
      SecurityGroups:
      - !Ref EFSSecurityGroup

  ##################
  # Security Group #
  ##################
  EFSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'RancherVPC'
      GroupDescription: Enable EFS access from Rancher subnets to port 2049
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: '0'
          ToPort: '65535'
          CidrIp: '0.0.0.0/0'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '2049'
          ToPort: '2049'
          CidrIp: !Join
            - ''
            - - !Ref 'VPCCidr'
              - .11.0/24
        - IpProtocol: tcp
          FromPort: '2049'
          ToPort: '2049'
          CidrIp: !Join
            - ''
            - - !Ref 'VPCCidr'
              - .12.0/24
        - IpProtocol: tcp
          FromPort: '2049'
          ToPort: '2049'
          CidrIp: !Join
            - ''
            - - !Ref 'VPCCidr'
              - .13.0/24

  RancherCPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'RancherVPC'
      GroupDescription: Enable HTTP/HTTPS access via port 80/443
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: '0'
          ToPort: '65535'
          CidrIp: '0.0.0.0/0'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '9345'
          ToPort: '9345'
          SourceSecurityGroupId: !GetAtt 'ControlPlaneELBSG.GroupId'
        - IpProtocol: tcp
          FromPort: '6443'
          ToPort: '6443'
          SourceSecurityGroupId: !GetAtt 'ControlPlaneELBSG.GroupId'
  RancherIngressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'RancherVPC'
      GroupDescription: Enable HTTP/HTTPS access via port 80/443
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: '0'
          ToPort: '65535'
          CidrIp: '0.0.0.0/0'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '30080'
          ToPort: '30080'
          SourceSecurityGroupId: !GetAtt 'RancherELBSG.GroupId'
        - IpProtocol: tcp
          FromPort: '30443'
          ToPort: '30443'
          SourceSecurityGroupId: !GetAtt 'RancherELBSG.GroupId'
        - IpProtocol: '-1'
          FromPort: '0'
          ToPort: '65535'
          SourceSecurityGroupId: !GetAtt 'RancherCPSecurityGroup.GroupId'
  ControlPlaneELBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'RancherVPC'
      GroupDescription: Enable controlplane connectivity
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: '0'
          ToPort: '65535'
          CidrIp: '0.0.0.0/0'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '6443'
          ToPort: '6443'
          CidrIp: !Ref AllowedCidr
        - IpProtocol: tcp
          FromPort: '9345'
          ToPort: '9345'
          CidrIp: !Ref AllowedCidr
  RancherELBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'RancherVPC'
      GroupDescription: Enable controlplane connectivity
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: '0'
          ToPort: '65535'
          CidrIp: '0.0.0.0/0'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref AllowedCidr
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Ref AllowedCidr

  #################
  # LoadBalancers #
  #################
  ControlPlaneELB:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      Subnets:
        - !Ref 'RancherPublicSubnet1'
        - !Ref 'RancherPublicSubnet2'
        - !Ref 'RancherPublicSubnet3'
      SecurityGroups:
        - !Ref 'ControlPlaneELBSG'
      CrossZone: 'true'
      Listeners:
        - LoadBalancerPort: '6443'
          InstancePort: '6443'
          Protocol: TCP
        - LoadBalancerPort: '9345'
          InstancePort: '9345'
          Protocol: TCP
      HealthCheck:
        Target: TCP:6443
        HealthyThreshold: '3'
        UnhealthyThreshold: '5'
        Interval: '30'
        Timeout: '5'
  RancherELB:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      Subnets:
        - !Ref 'RancherPublicSubnet1'
        - !Ref 'RancherPublicSubnet2'
        - !Ref 'RancherPublicSubnet3'
      SecurityGroups:
        - !Ref 'RancherELBSG'
      CrossZone: 'true'
      Listeners:
        - LoadBalancerPort: '80'
          InstancePort: '30080'
          Protocol: TCP
        - LoadBalancerPort: '443'
          InstancePort: '30443'
          Protocol: TCP
      HealthCheck:
        Target: TCP:30080
        HealthyThreshold: '3'
        UnhealthyThreshold: '5'
        Interval: '30'
        Timeout: '5'

Outputs:
  RancherURL:
    Description: Rancher Manager Access URL
    Value: !GetAtt 'RancherELB.DNSName'
  CloudCredentialKey:
    Description: AWS Access Key for Rancher
    Value: !Ref RancherCloudCredentialKey
  CloudCredentialSecret:
    Description: AWS Secret Key for Rancher (Sensitive!)
    Value: !GetAtt RancherCloudCredentialKey.SecretAccessKey
